# cfmanager

./: .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW.md  LICENSE  Makefile  README.md  implementation_plan.md  pyproject.toml
.github/workflows/: build-nuitka.yml  publish-pypi.yml  release.yml  test.yml
scripts/: build_exe.py  release.py
src/cfmanager/: __main__.py
src/cfmanager/cli/: __init__.py  analytics.py  app.py  completion.py  config.py  dns.py  email_routing.py  firewall.py  kv.py  loadbalancers.py  page_rules.py  pages.py  r2.py  ssl.py  tunnels.py  workers.py  zones.py
src/cfmanager/core/: client.py  config.py  decorators.py  errors.py  exceptions.py  logger.py  output.py  profiles.py
src/cfmanager/services/: __init__.py  analytics.py  backup.py  dns.py  email_routing.py  firewall.py  loadbalancers.py  page_rules.py  pages.py  r2.py  ssl.py  tunnels.py  workers.py  zones.py
src/cfmanager/tui/: __init__.py  app.py  commands.py  theme.tcss
src/cfmanager/tui/screens/: __init__.py  dashboard.py  dns.py  loadbalancers.py  pages.py  r2.py  ssl.py  zones.py
src/cfmanager/tui/widgets/: __init__.py  dialogs.py  sidebar.py  status_bar.py
tests/: conftest.py
tests/test_cli/: test_analytics_cli.py  test_backup_cli.py  test_completion_cli.py  test_dns_cli.py  test_dns_import_export_cli.py  test_email_routing_cli.py  test_firewall_cli.py  test_lb_cli.py  test_page_rules_cli.py  test_pages_cli.py  test_profiles_cli.py  test_r2_cli.py  test_ssl_cli.py  test_tunnels_cli.py  test_typed_confirmation_cli.py  test_watch_mode.py  test_workers_cli.py  test_zones_cli.py
tests/test_core/: test_cf_api_decorator.py  test_config.py  test_profiles.py
tests/test_services/: test_analytics.py  test_backup.py  test_dns.py  test_dns_import_export.py  test_email_routing.py  test_firewall.py  test_loadbalancers.py  test_page_rules.py  test_pages.py  test_purge_cache.py  test_r2.py  test_ssl.py  test_tunnels.py  test_workers.py  test_zones.py
tests/test_tui/: test_app.py
