[project]
name = "cfmanager"
version = "0.1.0"
description = "A powerful CLI & TUI for managing Cloudflare infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudflare>=5.2.0",
    "textual>=8.2.7",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "boto3>=1.34.100",
]

[project.scripts]
cfm = "cfmanager.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "respx>=0.21.1",
]
